// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`api cloudproviderCredentials should create a cloudProvider credentialsbinding and secret 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/api/v1/namespaces/garden-foo/secrets",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "apiVersion": "v1",
      "data": {
        "key": "bmV3LWRhdGE=",
      },
      "kind": "Secret",
      "metadata": {
        "name": "new-foo-infra3-secret",
        "namespace": "garden-foo",
      },
      "type": "Opaque",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/security.gardener.cloud/v1alpha1/namespaces/garden-foo/credentialsbindings",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "apiVersion": "security.gardener.cloud/v1alpha1",
      "credentialsRef": {
        "apiVersion": "v1",
        "kind": "Secret",
        "name": "new-foo-infra3-secret",
        "namespace": "garden-foo",
      },
      "kind": "CredentialsBinding",
      "metadata": {
        "name": "new-foo-infra3-credentialsbinding",
        "namespace": "garden-foo",
      },
      "provider": {
        "type": "foo-infra3",
      },
    },
  ],
]
`;

exports[`api cloudproviderCredentials should create a cloudProvider credentialsbinding and secret 2`] = `
{
  "binding": {
    "apiVersion": "security.gardener.cloud/v1alpha1",
    "credentialsRef": {
      "apiVersion": "v1",
      "kind": "Secret",
      "name": "new-foo-infra3-secret",
      "namespace": "garden-foo",
    },
    "kind": "CredentialsBinding",
    "metadata": {
      "name": "new-foo-infra3-credentialsbinding",
      "namespace": "garden-foo",
      "resourceVersion": "42",
    },
    "provider": {
      "type": "foo-infra3",
    },
  },
  "secret": {
    "apiVersion": "v1",
    "data": {
      "key": "bmV3LWRhdGE=",
    },
    "kind": "Secret",
    "metadata": {
      "name": "new-foo-infra3-secret",
      "namespace": "garden-foo",
      "resourceVersion": "42",
    },
    "type": "Opaque",
  },
}
`;

exports[`api cloudproviderCredentials should create a cloudProvider dns secret (no binding) 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/api/v1/namespaces/garden-foo/secrets",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "apiVersion": "v1",
      "data": {
        "key": "bmV3LWRhdGE=",
      },
      "kind": "Secret",
      "metadata": {
        "labels": {
          "dashboard.gardener.cloud/dnsProviderType": "aws-route53",
        },
        "name": "new-dns-secret",
        "namespace": "garden-foo",
      },
      "type": "Opaque",
    },
  ],
]
`;

exports[`api cloudproviderCredentials should create a cloudProvider dns secret (no binding) 2`] = `
{
  "secret": {
    "apiVersion": "v1",
    "data": {
      "key": "bmV3LWRhdGE=",
    },
    "kind": "Secret",
    "metadata": {
      "labels": {
        "dashboard.gardener.cloud/dnsProviderType": "aws-route53",
      },
      "name": "new-dns-secret",
      "namespace": "garden-foo",
      "resourceVersion": "42",
    },
    "type": "Opaque",
  },
}
`;

exports[`api cloudproviderCredentials should delete a cloudProvider DNS credential (secret / no binding) 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/api/v1/namespaces/garden-foo/secrets/dns-secret",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudproviderCredentials should delete a cloudProvider DNS credential (secret / no binding) 2`] = `{}`;

exports[`api cloudproviderCredentials should delete a cloudProvider DNS credential (workloadidentity / no binding) 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/security.gardener.cloud/v1alpha1/namespaces/garden-foo/workloadidentities/dns-wlid",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudproviderCredentials should delete a cloudProvider DNS credential (workloadidentity / no binding) 2`] = `{}`;

exports[`api cloudproviderCredentials should delete an own cloudProvider credential (secret / credentialsbinding) 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/security.gardener.cloud/v1alpha1/namespaces/garden-foo/credentialsbindings/foo-infra3-secret3-credentialsbinding",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/api/v1/namespaces/garden-foo/secrets/secret3",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/security.gardener.cloud/v1alpha1/namespaces/garden-foo/credentialsbindings/foo-infra3-secret3-credentialsbinding",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudproviderCredentials should delete an own cloudProvider credential (secret / credentialsbinding) 2`] = `{}`;

exports[`api cloudproviderCredentials should delete an own cloudProvider credential (secretbinding) 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/foo-infra3-secret2-secretbinding",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/api/v1/namespaces/garden-foo/secrets/secret2",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings/foo-infra3-secret2-secretbinding",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudproviderCredentials should delete an own cloudProvider credential (secretbinding) 2`] = `{}`;

exports[`api cloudproviderCredentials should delete an own cloudProvider credential (workloadidentity / credentialsbinding) 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/security.gardener.cloud/v1alpha1/namespaces/garden-foo/credentialsbindings/foo-wlid1",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/security.gardener.cloud/v1alpha1/namespaces/garden-foo/workloadidentities/wl-foo-infra1",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "delete",
      ":path": "/apis/security.gardener.cloud/v1alpha1/namespaces/garden-foo/credentialsbindings/foo-wlid1",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudproviderCredentials should delete an own cloudProvider credential (workloadidentity / credentialsbinding) 2`] = `{}`;

exports[`api cloudproviderCredentials should patch an own dns secret 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "put",
      ":path": "/api/v1/namespaces/garden-foo/secrets/secret1",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "data": {
        "key": "Zm9vS2V5",
        "secret": "Zm9vU2VjcmV0",
      },
      "metadata": {
        "name": "secret1",
        "namespace": "garden-foo",
      },
    },
  ],
]
`;

exports[`api cloudproviderCredentials should patch an own dns secret 2`] = `
{
  "secret": {
    "data": {
      "key": "Zm9vS2V5",
      "secret": "Zm9vU2VjcmV0",
    },
    "metadata": {
      "name": "secret1",
      "namespace": "garden-foo",
      "resourceVersion": "43",
    },
  },
}
`;

exports[`api cloudproviderCredentials should re-create an own infra credential (secret) when patching an orphaned binding 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "put",
      ":path": "/api/v1/namespaces/garden-foo/secrets/secret4",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "data": {
        "key": "Zm9vS2V5",
        "secret": "Zm9vU2VjcmV0",
      },
      "metadata": {
        "name": "secret4",
        "namespace": "garden-foo",
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/api/v1/namespaces/garden-foo/secrets",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
    {
      "data": {
        "key": "Zm9vS2V5",
        "secret": "Zm9vU2VjcmV0",
      },
      "metadata": {
        "name": "secret4",
        "namespace": "garden-foo",
      },
    },
  ],
]
`;

exports[`api cloudproviderCredentials should re-create an own infra credential (secret) when patching an orphaned binding 2`] = `
{
  "secret": {
    "data": {
      "key": "Zm9vS2V5",
      "secret": "Zm9vU2VjcmV0",
    },
    "metadata": {
      "name": "secret4",
      "namespace": "garden-foo",
      "resourceVersion": "42",
    },
  },
}
`;

exports[`api cloudproviderCredentials should return secretbindings, credentialsbinding, secrets and workloadidentities for given namespace 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/core.gardener.cloud/v1beta1/namespaces/garden-foo/secretbindings",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/security.gardener.cloud/v1alpha1/namespaces/garden-foo/credentialsbindings",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/api/v1/namespaces/garden-foo/secrets",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "get",
      ":path": "/apis/security.gardener.cloud/v1alpha1/namespaces/garden-foo/workloadidentities",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImJhckBleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.7WKy0sNVkJzIqh3QJIF1zk3QjzwFe_zMTv8PmnOCsxg",
    },
  ],
]
`;

exports[`api cloudproviderCredentials should return secretbindings, credentialsbinding, secrets and workloadidentities for given namespace 2`] = `
{
  "credentialsBindings": [
    {
      "credentialsRef": {
        "kind": "Secret",
        "name": "secret1",
        "namespace": "garden-foo",
      },
      "kind": "CredentialsBinding",
      "metadata": {
        "name": "foo-infra1-secret1-credentialsbinding",
        "namespace": "garden-foo",
      },
      "provider": "infra1",
      "quotas": [
        {
          "name": "foo-quota1",
          "namespace": "garden-foo",
        },
        {
          "name": "foo-quota2",
          "namespace": "garden-foo",
        },
      ],
    },
    {
      "credentialsRef": {
        "kind": "Secret",
        "name": "secret3",
        "namespace": "garden-foo",
      },
      "kind": "CredentialsBinding",
      "metadata": {
        "name": "foo-infra3-secret3-credentialsbinding",
        "namespace": "garden-foo",
      },
      "provider": "infra3",
      "quotas": [
        {
          "name": "foo-quota1",
          "namespace": "garden-foo",
        },
        {
          "name": "foo-quota2",
          "namespace": "garden-foo",
        },
      ],
    },
    {
      "credentialsRef": {
        "kind": "Secret",
        "name": "trial-secret",
        "namespace": "garden-trial",
      },
      "kind": "CredentialsBinding",
      "metadata": {
        "name": "trial-infra1",
        "namespace": "garden-foo",
      },
      "provider": "infra1",
      "quotas": [
        {
          "name": "foo-quota1",
          "namespace": "garden-foo",
        },
        {
          "name": "foo-quota2",
          "namespace": "garden-foo",
        },
      ],
    },
    {
      "credentialsRef": {
        "kind": "WorkloadIdentity",
        "name": "wl-foo-infra1",
        "namespace": "garden-foo",
      },
      "kind": "CredentialsBinding",
      "metadata": {
        "name": "foo-wlid1",
        "namespace": "garden-foo",
      },
      "provider": "infra1",
      "quotas": [
        {
          "name": "foo-quota1",
          "namespace": "garden-foo",
        },
        {
          "name": "foo-quota2",
          "namespace": "garden-foo",
        },
      ],
    },
  ],
  "quotas": [
    {
      "metadata": {
        "name": "foo-quota1",
        "namespace": "garden-foo",
        "uid": 2,
      },
      "spec": {
        "clusterLifetimeDays": 14,
        "scope": {
          "apiVersion": "v1",
          "kind": "Secret",
        },
      },
    },
    {
      "metadata": {
        "name": "foo-quota2",
        "namespace": "garden-foo",
        "uid": 3,
      },
      "spec": {
        "clusterLifetimeDays": 14,
        "scope": {
          "apiVersion": "v1",
          "kind": "Secret",
        },
      },
    },
  ],
  "secretBindings": [
    {
      "kind": "SecretBinding",
      "metadata": {
        "name": "foo-infra1-secret1-secretbinding",
        "namespace": "garden-foo",
      },
      "provider": "infra1",
      "quotas": [
        {
          "name": "foo-quota1",
          "namespace": "garden-foo",
        },
        {
          "name": "foo-quota2",
          "namespace": "garden-foo",
        },
      ],
      "secretRef": {
        "name": "secret1",
        "namespace": "garden-foo",
      },
    },
    {
      "kind": "SecretBinding",
      "metadata": {
        "name": "foo-infra3-secret2-secretbinding",
        "namespace": "garden-foo",
      },
      "provider": "infra3",
      "quotas": [
        {
          "name": "foo-quota1",
          "namespace": "garden-foo",
        },
        {
          "name": "foo-quota2",
          "namespace": "garden-foo",
        },
      ],
      "secretRef": {
        "name": "secret2",
        "namespace": "garden-foo",
      },
    },
    {
      "kind": "SecretBinding",
      "metadata": {
        "name": "trial-infra1",
        "namespace": "garden-foo",
      },
      "provider": "infra1",
      "quotas": [
        {
          "name": "foo-quota1",
          "namespace": "garden-foo",
        },
        {
          "name": "foo-quota2",
          "namespace": "garden-foo",
        },
      ],
      "secretRef": {
        "name": "trial-secret",
        "namespace": "garden-trial",
      },
    },
  ],
  "secrets": [
    {
      "data": {
        "key": "Zm9vS2V5",
        "secret": "Zm9vU2VjcmV0",
      },
      "metadata": {
        "labels": {
          "provider.shoot.gardener.cloud/aws": "true",
        },
        "name": "secret3",
        "namespace": "garden-foo",
      },
    },
    {
      "data": {
        "key": "Zm9vS2V5",
        "secret": "Zm9vU2VjcmV0",
      },
      "metadata": {
        "labels": {
          "dashboard.gardener.cloud/dnsProviderType": "aws-route53",
        },
        "name": "dns-secret",
        "namespace": "garden-foo",
      },
    },
  ],
  "workloadIdentities": [],
}
`;
